# listify.py

./: README.md  setup.cfg  setup.py  todo.txt
listify/: __init__.py
tests/cli-args/examples/: example.py
