[metadata]
name = listify
version = 2018.11.19
url = https://github.com/looking-for-a-job/listify.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = listify list

[options]
install_requires = 
	public
	setuptools
packages = 
	listify
