# https://pypi.org/project/setupcfg-generator/
[metadata]
name = listify
version = 2019.3.22
url = https://github.com/looking-for-a-job/listify.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = listify list

[options]
install_requires = 
	public
	setuptools
packages = 
	listify
